<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Home">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="5dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_user_name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userPasswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwd_user_passwd"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/userAddEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_user_email"
                android:textStyle="bold"
                android:textSize="25sp"
                android:padding="10dp"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:layout_margin="25dp"
        android:textSize="18sp"
        android:padding="10dp"/>


</LinearLayout>